--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -41,6 +41,7 @@
   {% endif %}
   <div class="md-footer-meta md-typeset">
     <div class="md-footer-meta__inner md-grid">
+       <center>
       <div class="md-footer-copyright">
         {% if config.copyright %}
           <div class="md-footer-copyright__highlight">
@@ -48,6 +49,7 @@
           </div>
         {% endif %}
       </div>
+      </center>
       {% include "partials/social.html" %}
     </div>
   </div>
